--- a/book.html
+++ b/book.html
@@ -559,6 +559,25 @@
                         <input type="text" id="vehicle-model" placeholder="e.g., Civic" required>
                     </div>
 
+                    <!-- START: SMS Compliance Section -->
+                    <div class="mt-6 p-4 border border-gray-200 rounded-lg bg-gray-50">
+                        <label class="block text-sm font-medium text-gray-700 mb-3">SMS Notifications & Terms</label>
+                        <div class="space-y-3">
+                            <label class="flex items-center space-x-3 cursor-pointer text-gray-700">
+                                <input type="checkbox" id="sms-consent-transactional" class="rounded h-4 w-4 text-blue-600 focus:ring-blue-500">
+                                <span>Appointment reminders & account updates.</span>
+                            </label>
+                            <label class="flex items-center space-x-3 cursor-pointer text-gray-700">
+                                <input type="checkbox" id="sms-consent-marketing" class="rounded h-4 w-4 text-blue-600 focus:ring-blue-500">
+                                <span>Promotional offers & discounts.</span>
+                            </label>
+                        </div>
+                        <p class="text-xs text-gray-500 mt-4">
+                            By providing your phone number and checking the boxes, you agree to receive text messages from Michie Auto Detailing for the purposes selected. Consent is not a condition of purchase. Message frequency will vary. Msg & data rates may apply. Reply HELP for help or STOP to cancel. View our <a href="#" class="text-blue-600 hover:underline" target="_blank">Terms of Service</a> & <a href="#" class="text-blue-600 hover:underline" target="_blank">Privacy Policy</a>.
+                        </p>
+                    </div>
+                    <!-- END: SMS Compliance Section -->
+
                     <!-- Create Account Option -->
                     <div class="mt-4">
                         <label class="flex items-center space-x-2 cursor-pointer text-gray-700">
