--- a/betabook.html
+++ b/betabook.html
@@ -610,7 +610,7 @@
                             </label>
                         </div>
                         <p class="text-xs text-gray-500 mt-4">
-                            By providing your phone number and checking the boxes, you agree to receive text messages from Michie Auto Detailing for the purposes selected. Consent is not a condition of purchase. Message frequency will vary. Msg & data rates may apply. Reply HELP for help or STOP to cancel. View our <a href="#" class="text-blue-600 hover:underline" target="_blank">Terms of Service</a> & <a href="#" class="text-blue-600 hover:underline" target="_blank">Privacy Policy</a>.
+                            By providing your phone number and checking the boxes, you agree to receive text messages from Michie Auto Detailing for the purposes selected. Consent is not a condition of purchase. Message frequency will vary. Msg & data rates may apply. Reply HELP for help or STOP to cancel. View our <a href="https://michieauto.com/smstos" class="text-blue-600 hover:underline" target="_blank">Terms of Service</a> & <a href="https://michieauto.com/smsprivacy" class="text-blue-600 hover:underline" target="_blank">Privacy Policy</a>.
                         </p>
                     </div>
                     <!-- END: SMS Compliance Section -->
