--- a/customer_signup.html
+++ b/customer_signup.html
@@ -41,7 +41,7 @@
                         <div class="grid grid-cols-1 gap-y-6">
                             <input type="text" v-model="form.fullName" placeholder="Full Name" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500">
                             
-                            <!-- WORKING Address Section -->
+                            <!-- Address Section -->
                             <div class="space-y-4">
                                 <div>
                                     <label class="block text-sm font-medium text-gray-700 mb-1">Service Address</label>
@@ -62,8 +62,6 @@
                                 </div>
                             </div>
 
-                            <!-- Removed "I have confirmed the address listed is correct." checkbox -->
-
                             <input type="tel" v-model="form.phone" placeholder="Phone Number" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500">
                             <input type="email" v-model="form.email" placeholder="Email Address" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500">
                             <div>
@@ -76,7 +74,7 @@
                         </div>
                     </div>
 
-                    <!-- RESTORED: Vehicle Information -->
+                    <!-- Vehicle Information -->
                     <div>
                         <h2 class="text-2xl font-semibold text-gray-700 mb-4 border-b pb-2">Primary Vehicle</h2>
                         <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
@@ -100,16 +98,30 @@
                         </div>
                     </div>
 
-                    <!-- RESTORED: Verification Section -->
+                    <!-- Verification Section -->
                     <div>
                         <h2 class="text-2xl font-semibold text-gray-700 mb-4 border-b pb-2">Verification</h2>
                         <input type="text" v-model="form.zipCode" placeholder="Enter your zip code" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500">
                     </div>
 
-                    <!-- Text Message Disclaimer -->
-                    <div class="text-sm text-gray-500 mt-6 p-4 bg-gray-50 rounded-lg border border-gray-200">
-                        <p class="font-semibold mb-2">Text Message Consent:</p>
-                        <p>By providing your phone number, you agree to receive text messages from Michie Auto Detailing regarding your appointments, service updates, and promotions. Message and data rates may apply. Message frequency varies. You can reply STOP at any time to opt-out. Your consent is not a condition of any purchase.</p>
+                    <!-- NEW: SMS Notifications & Terms -->
+                    <div class="space-y-4 mt-6 p-4 bg-gray-50 rounded-lg border border-gray-200">
+                        <h3 class="text-lg font-semibold text-gray-800">SMS Notifications & Terms</h3>
+                        <div class="space-y-3">
+                            <label class="flex items-center space-x-3 cursor-pointer">
+                                <input type="checkbox" v-model="smsConsent.transactional" class="rounded h-4 w-4 text-blue-600 focus:ring-blue-500">
+                                <span class="text-gray-700">Appointment reminders & account updates.</span>
+                            </label>
+                            <label class="flex items-center space-x-3 cursor-pointer">
+                                <input type="checkbox" v-model="smsConsent.promotional" class="rounded h-4 w-4 text-blue-600 focus:ring-blue-500">
+                                <span class="text-gray-700">Promotional offers & discounts.</span>
+                            </label>
+                        </div>
+                        <p class="text-sm text-gray-500 pt-2">
+                            By providing your phone number and checking the boxes, you agree to receive text messages from Michie Auto Detailing for the purposes selected. Consent is not a condition of purchase. Message frequency will vary. Msg & data rates may apply. Reply HELP for help or STOP to cancel. View our 
+                            <a href="#" class="text-blue-600 hover:underline">Terms of Service</a> & 
+                            <a href="#" class="text-blue-600 hover:underline">Privacy Policy</a>.
+                        </p>
                     </div>
 
                     <!-- Submission -->
@@ -135,7 +147,7 @@
 
             const app = createApp({
                 setup() {
-                    // Add vehicle fields to the form state
+                    // Form state
                     const form = reactive({
                         fullName: '', phone: '', email: '', password: '', zipCode: '',
                         vehicle1Year: '', vehicle1Make: '', vehicle1Model: '',
@@ -143,13 +155,17 @@
                     });
                     const address = reactive({ street: '', city: '', state: '', zip: '' });
                     const showSecondVehicle = ref(false);
-                    // isAddressConfirmed is no longer needed as a user-facing checkbox,
-                    // but we'll keep it for internal logic to ensure an address is selected.
                     const isAddressConfirmed = ref(false); 
                     const formMessage = reactive({ text: '', type: '' });
                     const isSubmitting = ref(false);
                     const autocompleteInput = ref(null);
                     let autocomplete = null;
+
+                    // NEW: SMS Consent state
+                    const smsConsent = reactive({
+                        transactional: false,
+                        promotional: false
+                    });
 
                     const passwordReqs = computed(() => ({
                         length: form.password.length >= 6,
@@ -190,7 +206,7 @@
                         address.state = state;
                         address.zip = zip;
                         form.zipCode = zip;
-                        isAddressConfirmed.value = true; // Automatically confirm once address is filled
+                        isAddressConfirmed.value = true;
                     };
 
                     const handleSubmit = async () => {
@@ -199,7 +215,6 @@
                             formMessage.type = 'error';
                             return;
                         }
-                        // Check if an address has been selected/confirmed by the autocomplete
                         if (!isAddressConfirmed.value || !address.street || !address.city || !address.state || !address.zip) {
                             formMessage.text = 'Please select a valid service address using the autocomplete.';
                             formMessage.type = 'error';
@@ -226,7 +241,12 @@
                                 year: form.vehicle2Year,
                                 make: form.vehicle2Make,
                                 model: form.vehicle2Model,
-                            } : null
+                            } : null,
+                            // ADDED: SMS consent data
+                            sms_consent: {
+                                transactional: smsConsent.transactional,
+                                promotional: smsConsent.promotional
+                            }
                         };
 
                         console.log("Submitting form data:", submissionData);
@@ -258,7 +278,7 @@
 
                     return {
                         form, address, showSecondVehicle, isAddressConfirmed, formMessage, isSubmitting,
-                        passwordReqs, handleSubmit, autocompleteInput
+                        passwordReqs, handleSubmit, autocompleteInput, smsConsent // Expose smsConsent to the template
                     };
                 }
             });
